Add stop instance
